--- a/solutions/05_pytorch_going_modular_exercise_solutions.ipynb
+++ b/solutions/05_pytorch_going_modular_exercise_solutions.ipynb
@@ -1,36 +1,22 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "05_pytorch_going_modular_exercise_solutions.ipynb",
-      "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMV7Vpu90H5EsauLjBra4IS",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/mrdbourke/pytorch-deep-learning/blob/main/extras/solutions/05_pytorch_going_modular_exercise_solutions.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
+      "metadata": {
+        "id": "zNqPNlYylluR"
+      },
       "source": [
         "# 05. PyTorch Going Modular Exercise Solutions\n",
         "\n",
@@ -43,25 +29,40 @@
         "1. These exercises/solutions are based on [section 05. PyTorch Going Modular](https://www.learnpytorch.io/05_pytorch_going_modular/) of the Learn PyTorch for Deep Learning course by Zero to Mastery.\n",
         "2. See a live [walkthrough of the solutions (errors and all) on YouTube](https://youtu.be/ijgFhMK3pp4).\n",
         "3. See [other solutions on the course GitHub](https://github.com/mrdbourke/pytorch-deep-learning/tree/main/extras/solutions)."
-      ],
-      "metadata": {
-        "id": "zNqPNlYylluR"
-      }
+      ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
+      "metadata": {
+        "id": "bicbWSrPmfTU"
+      },
       "source": [
         "## 1. Turn the code to get the data (from section 1. Get Data) into a Python script, such as `get_data.py`.\n",
         "\n",
         "* When you run the script using `python get_data.py` it should check if the data already exists and skip downloading if it does.\n",
         "* If the data download is successful, you should be able to access the `pizza_steak_sushi` images from the `data` directory."
-      ],
-      "metadata": {
-        "id": "bicbWSrPmfTU"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "D-mTTwPjmt4f",
+        "outputId": "b482f845-1f78-4b4f-826a-c0c050c1b6ef"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Overwriting get_data.py\n"
+          ]
+        }
+      ],
       "source": [
         "%%writefile get_data.py\n",
         "import os\n",
@@ -76,11 +77,7 @@
         "image_path = data_path / \"pizza_steak_sushi\"\n",
         "\n",
         "# If the image folder doesn't exist, download it and prepare it... \n",
-        "if image_path.is_dir():\n",
-        "    print(f\"{image_path} directory exists.\")\n",
-        "else:\n",
-        "    print(f\"Did not find {image_path} directory, creating one...\")\n",
-        "    image_path.mkdir(parents=True, exist_ok=True)\n",
+        "image_path.mkdir(parents=True, exist_ok=True)\n",
         "    \n",
         "# Download pizza, steak, sushi data\n",
         "with open(data_path / \"pizza_steak_sushi.zip\", \"wb\") as f:\n",
@@ -95,52 +92,14 @@
         "\n",
         "# Remove zip file\n",
         "os.remove(data_path / \"pizza_steak_sushi.zip\")"
-      ],
-      "metadata": {
-        "id": "D-mTTwPjmt4f",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "b482f845-1f78-4b4f-826a-c0c050c1b6ef"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Writing get_data.py\n"
-          ]
-        }
       ]
     },
     {
-      "cell_type": "code",
-      "source": [
-        "!python get_data.py"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "WAtJ-n10BWHZ",
-        "outputId": "9c9b896c-a339-4d9a-f76d-69bce5261961"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Did not find data/pizza_steak_sushi directory, creating one...\n",
-            "Downloading pizza, steak, sushi data...\n",
-            "Unzipping pizza, steak, sushi data...\n"
-          ]
-        }
-      ]
-    },
-    {
+      "attachments": {},
       "cell_type": "markdown",
+      "metadata": {
+        "id": "zjyn7LU3mvkR"
+      },
       "source": [
         "## 2. Use [Python's `argparse` module](https://docs.python.org/3/library/argparse.html) to be able to send the `train.py` custom hyperparameter values for training procedures.\n",
         "* Add an argument flag for using a different:\n",
@@ -152,13 +111,27 @@
         "    * Keep the default values for each of the above arguments as what they already are (as in notebook 05).\n",
         "* For example, you should be able to run something similar to the following line to train a TinyVGG model with a learning rate of 0.003 and a batch size of 64 for 20 epochs: `python train.py --learning_rate 0.003 batch_size 64 num_epochs 20`.\n",
         "* **Note:** Since `train.py` leverages the other scripts we created in section 05, such as, `model_builder.py`, `utils.py` and `engine.py`, you'll have to make sure they're available to use too. You can find these in the [`going_modular` folder on the course GitHub](https://github.com/mrdbourke/pytorch-deep-learning/tree/main/going_modular/going_modular). "
-      ],
-      "metadata": {
-        "id": "zjyn7LU3mvkR"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QQ4GoYVpDg3g",
+        "outputId": "11511586-1a10-43fd-b60b-81a9b32f5a8e"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Writing data_setup.py\n"
+          ]
+        }
+      ],
       "source": [
         "%%writefile data_setup.py\n",
         "\"\"\"\n",
@@ -223,27 +196,27 @@
         "  )\n",
         "\n",
         "  return train_dataloader, test_dataloader, class_names"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "QQ4GoYVpDg3g",
-        "outputId": "11511586-1a10-43fd-b60b-81a9b32f5a8e"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Writing data_setup.py\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EzD2EHmsDqMg",
+        "outputId": "8c15e6f3-14cf-444e-c246-defed3e81a29"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Writing engine.py\n"
+          ]
+        }
+      ],
       "source": [
         "%%writefile engine.py\n",
         "\"\"\"\n",
@@ -426,27 +399,27 @@
         "\n",
         "    # Return the filled results at the end of the epochs\n",
         "    return results"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "EzD2EHmsDqMg",
-        "outputId": "8c15e6f3-14cf-444e-c246-defed3e81a29"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Writing engine.py\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "V0jywo2jDx-d",
+        "outputId": "ea63d29d-e4ce-4057-da82-5ea92c1a1e95"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Writing model_builder.py\n"
+          ]
+        }
+      ],
       "source": [
         "%%writefile model_builder.py\n",
         "\"\"\"\n",
@@ -466,6 +439,7 @@
         "    \"\"\"\n",
         "    def __init__(self, input_shape: int, hidden_units: int, output_shape: int) -> None:\n",
         "        super().__init__()\n",
+        "\n",
         "        self.conv_block_1 = nn.Sequential(\n",
         "          nn.Conv2d(in_channels=input_shape, \n",
         "                    out_channels=hidden_units, \n",
@@ -498,32 +472,28 @@
         "        )\n",
         "    \n",
         "    def forward(self, x: torch.Tensor):\n",
-        "        x = self.conv_block_1(x)\n",
-        "        x = self.conv_block_2(x)\n",
-        "        x = self.classifier(x)\n",
-        "        return x\n",
-        "        # return self.classifier(self.block_2(self.block_1(x))) # <- leverage the benefits of operator fusion"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "V0jywo2jDx-d",
-        "outputId": "ea63d29d-e4ce-4057-da82-5ea92c1a1e95"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Writing model_builder.py\n"
-          ]
-        }
+        "        return self.classifier(self.block_2(self.block_1(x))) # <- leverage the benefits of operator fusion"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wk7FsALmD1pI",
+        "outputId": "344661fd-f1b7-4cde-8f65-5c3b707023e2"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Writing utils.py\n"
+          ]
+        }
+      ],
       "source": [
         "%%writefile utils.py\n",
         "\"\"\"\n",
@@ -559,27 +529,27 @@
         "    print(f\"[INFO] Saving model to: {model_save_path}\")\n",
         "    torch.save(obj=model.state_dict(),\n",
         "             f=model_save_path)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "wk7FsALmD1pI",
-        "outputId": "344661fd-f1b7-4cde-8f65-5c3b707023e2"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Writing utils.py\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wYVTSZ5sm02-",
+        "outputId": "aa595a1e-af61-4294-dcbd-6ebee5849fec"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Writing train.py\n"
+          ]
+        }
+      ],
       "source": [
         "%%writefile train.py\n",
         "\"\"\"\n",
@@ -692,30 +662,11 @@
         "utils.save_model(model=model,\n",
         "                 target_dir=\"models\",\n",
         "                 model_name=\"05_going_modular_script_mode_tinyvgg_model.pth\")"
-      ],
-      "metadata": {
-        "id": "wYVTSZ5sm02-",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "aa595a1e-af61-4294-dcbd-6ebee5849fec"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Writing train.py\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!python train.py --num_epochs 5 --batch_size 128 --hidden_units 128 --learning_rate 0.0003"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -723,11 +674,10 @@
         "id": "LzaJl39lC40N",
         "outputId": "a5cf39b4-b69c-4b32-9ce7-0f025a18d582"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "[INFO] Training a model for 5 epochs with batch size 128 using 128 hidden units and a learning rate of 0.0003\n",
             "[INFO] Training data file: data/pizza_steak_sushi/train\n",
@@ -741,23 +691,44 @@
             "[INFO] Saving model to: models/05_going_modular_script_mode_tinyvgg_model.pth\n"
           ]
         }
+      ],
+      "source": [
+        "!python train.py --num_epochs 5 --batch_size 128 --hidden_units 128 --learning_rate 0.0003"
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
+      "metadata": {
+        "id": "P2g6EEYvm-46"
+      },
       "source": [
         "## 3. Create a Python script to predict (such as `predict.py`) on a target image given a file path with a saved model.\n",
         "\n",
         "* For example, you should be able to run the command `python predict.py some_image.jpeg` and have a trained PyTorch model predict on the image and return its prediction.\n",
         "* To see example prediction code, check out the [predicting on a custom image section in notebook 04](https://www.learnpytorch.io/04_pytorch_custom_datasets/#113-putting-custom-image-prediction-together-building-a-function). \n",
         "* You may also have to write code to load in a trained model."
-      ],
-      "metadata": {
-        "id": "P2g6EEYvm-46"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0CyTzC3tnCon",
+        "outputId": "3baa1cd0-ebb3-410b-f6e5-ef50f9ad17a2"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Writing predict.py\n"
+          ]
+        }
+      ],
       "source": [
         "%%writefile predict.py\n",
         "import torch\n",
@@ -839,30 +810,11 @@
         "\n",
         "if __name__ == \"__main__\":\n",
         "  predict_on_image()"
-      ],
-      "metadata": {
-        "id": "0CyTzC3tnCon",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "3baa1cd0-ebb3-410b-f6e5-ef50f9ad17a2"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Writing predict.py\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!python predict.py --image data/pizza_steak_sushi/test/sushi/175783.jpg"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -870,29 +822,57 @@
         "id": "Zcvw9sitIn6r",
         "outputId": "dd388c00-a10f-4c14-bdd3-51f507e20a12"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "[INFO] Predicting on data/pizza_steak_sushi/test/sushi/175783.jpg\n",
             "[INFO] Loading in model from: models/05_going_modular_script_mode_tinyvgg_model.pth\n",
             "[INFO] Pred class: steak, Pred prob: 0.376\n"
           ]
         }
+      ],
+      "source": [
+        "!python predict.py --image data/pizza_steak_sushi/test/sushi/175783.jpg"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "nwmoMhW8IqSu"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "authorship_tag": "ABX9TyMV7Vpu90H5EsauLjBra4IS",
+      "collapsed_sections": [],
+      "include_colab_link": true,
+      "name": "05_pytorch_going_modular_exercise_solutions.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.0"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
