--- a/exercises/00_pytorch_fundamentals_exercises.ipynb
+++ b/exercises/00_pytorch_fundamentals_exercises.ipynb
@@ -1,24 +1,11 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "00_pytorch_fundamentals_exercises.ipynb",
-      "provenance": [],
-      "collapsed_sections": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
+      "metadata": {
+        "id": "AzDBM_v4iMe7"
+      },
       "source": [
         "# 00. PyTorch Fundamentals Exercises\n",
         "\n",
@@ -28,69 +15,75 @@
         "  * The documentation on [`torch.Tensor`](https://pytorch.org/docs/stable/tensors.html#torch-tensor).\n",
         "  * The documentation on [`torch.cuda`](https://pytorch.org/docs/master/notes/cuda.html#cuda-semantics).\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "AzDBM_v4iMe7"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# No code solution (reading)"
-      ],
+      "execution_count": 1,
       "metadata": {
         "id": "bGD0oD8Kizak"
       },
-      "execution_count": 1,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# No code solution (reading)"
+      ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
-      "source": [
-        "### 2. Create a random tensor with shape `(7, 7)`.\n"
-      ],
       "metadata": {
         "id": "__iXqqz-ioUJ"
-      }
+      },
+      "source": [
+        "### 2. Create a random tensor with shape `(7, 7)`.\n"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Import torch\n",
-        "\n",
-        "\n",
-        "# Create random tensor\n"
-      ],
+      "execution_count": 4,
       "metadata": {
         "id": "6pUq9Dc8i2L7"
       },
-      "execution_count": 2,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Import torch\n",
+        "import torch\n",
+        "\n",
+        "# Create random tensor\n",
+        "tensor = torch.rand((7,7))"
+      ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
-      "source": [
-        "### 3. Perform a matrix multiplication on the tensor from 2 with another random tensor with shape `(1, 7)` (hint: you may have to transpose the second tensor)."
-      ],
       "metadata": {
         "id": "9-XxvRLfiqkR"
-      }
+      },
+      "source": [
+        "### 3. Perform a matrix multiplication on the tensor from 2 with another random tensor with shape `(1, 7)` (hint: you may have to transpose the second tensor)."
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Create another random tensor\n",
-        "\n",
-        "# Perform matrix multiplication \n"
-      ],
+      "execution_count": 6,
       "metadata": {
         "id": "NcLqR0Sbi_vT"
       },
-      "execution_count": 3,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Create another random tensor\n",
+        "tensor2=torch.rand((1,7))\n",
+        "\n",
+        "# Perform matrix multiplication \n",
+        "mul = torch.matmul(tensor,tensor2.T)"
+      ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
+      "metadata": {
+        "id": "eiutdKUFiryU"
+      },
       "source": [
         "### 4. Set the random seed to `0` and do 2 & 3 over again.\n",
         "\n",
@@ -104,51 +97,73 @@
         "         [2.5290],\n",
         "         [1.7989]]), torch.Size([7, 1]))\n",
         "```"
-      ],
-      "metadata": {
-        "id": "eiutdKUFiryU"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Set manual seed\n",
-        "\n",
-        "\n",
-        "# Create two random tensors\n",
-        "\n",
-        "\n",
-        "# Matrix multiply tensors\n"
-      ],
+      "execution_count": 8,
       "metadata": {
         "id": "D-lOWI_1jRMm"
       },
-      "execution_count": 4,
-      "outputs": []
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "tensor([[1.8542],\n",
+              "        [1.9611],\n",
+              "        [2.2884],\n",
+              "        [3.0481],\n",
+              "        [1.7067],\n",
+              "        [2.5290],\n",
+              "        [1.7989]])"
+            ]
+          },
+          "execution_count": 8,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# Set manual seed\n",
+        "torch.manual_seed(0)\n",
+        "\n",
+        "# Create two random tensors\n",
+        "tensor3=torch.rand((7,7))\n",
+        "tensor4=torch.rand((1,7))\n",
+        "\n",
+        "# Matrix multiply tensors\n",
+        "torch.matmul(tensor3,tensor4.T)"
+      ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
+      "metadata": {
+        "id": "ezY6ks9Cis37"
+      },
       "source": [
         "### 5. Speaking of random seeds, we saw how to set it with `torch.manual_seed()` but is there a GPU equivalent? (hint: you'll need to look into the documentation for `torch.cuda` for this one)\n",
         "  * If there is, set the GPU random seed to `1234`."
-      ],
-      "metadata": {
-        "id": "ezY6ks9Cis37"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Set random seed on the GPU\n"
-      ],
+      "execution_count": 9,
       "metadata": {
         "id": "_LKWcfSTjp00"
       },
-      "execution_count": 5,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Set random seed on the GPU\n",
+        "torch.cuda.manual_seed(42)\n"
+      ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
+      "metadata": {
+        "id": "Ir9qSaj6it4n"
+      },
       "source": [
         "\n",
         "### 6. Create two random tensors of shape `(2, 3)` and send them both to the GPU (you'll need access to a GPU for this). Set `torch.manual_seed(1234)` when creating the tensors (this doesn't have to be the GPU random seed). The output should be something like:\n",
@@ -160,29 +175,46 @@
         " tensor([[0.0518, 0.4681, 0.6738],\n",
         "         [0.3315, 0.7837, 0.5631]], device='cuda:0'))\n",
         "```"
-      ],
-      "metadata": {
-        "id": "Ir9qSaj6it4n"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Set random seed\n",
-        "\n",
-        "\n",
-        "# Check for access to GPU\n",
-        "\n",
-        "# Create two random tensors on GPU\n"
-      ],
+      "execution_count": 13,
       "metadata": {
         "id": "azXExiFZj5nm"
       },
-      "execution_count": 6,
-      "outputs": []
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "tensor([[0.0518, 0.4681, 0.6738],\n",
+              "        [0.3315, 0.7837, 0.5631]], device='cuda:0')"
+            ]
+          },
+          "execution_count": 13,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# Set random seed\n",
+        "torch.manual_seed(1234)\n",
+        "\n",
+        "# Check for access to GPU\n",
+        "device= \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+        "# Create two random tensors on GPU\n",
+        "t1=torch.rand((2,3)).to(device)\n",
+        "t2=torch.rand((2,3)).to(device)\n",
+        "\n",
+        "t2"
+      ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
+      "metadata": {
+        "id": "5TlAxeiSiu1y"
+      },
       "source": [
         "\n",
         "### 7. Perform a matrix multiplication on the tensors you created in 6 (again, you may have to adjust the shapes of one of the tensors).\n",
@@ -192,69 +224,97 @@
         "(tensor([[0.3647, 0.4709],\n",
         "         [0.5184, 0.5617]], device='cuda:0'), torch.Size([2, 2]))\n",
         "```"
-      ],
-      "metadata": {
-        "id": "5TlAxeiSiu1y"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Perform matmul on tensor_A and tensor_B\n"
-      ],
+      "execution_count": 16,
       "metadata": {
         "id": "fAeG7ox0lHEO"
       },
-      "execution_count": 7,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Perform matmul on tensor_A and tensor_B\n",
+        "res=torch.matmul(t1,t2.T)"
+      ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
-      "source": [
-        "### 8. Find the maximum and minimum values of the output of 7."
-      ],
       "metadata": {
         "id": "G7qfa5CSivwg"
-      }
+      },
+      "source": [
+        "### 8. Find the maximum and minimum values of the output of 7."
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Find max\n",
-        "\n",
-        "# Find min\n"
-      ],
+      "execution_count": 17,
       "metadata": {
         "id": "Fu8_3mZpllOd"
       },
-      "execution_count": 8,
-      "outputs": []
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "tensor(0.3647, device='cuda:0')"
+            ]
+          },
+          "execution_count": 17,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# Find max\n",
+        "torch.max(res)\n",
+        "# Find min\n",
+        "torch.min(res)"
+      ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
-      "source": [
-        "### 9. Find the maximum and minimum index values of the output of 7."
-      ],
       "metadata": {
         "id": "wrTj5FgNiw47"
-      }
+      },
+      "source": [
+        "### 9. Find the maximum and minimum index values of the output of 7."
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Find arg max\n",
-        "\n",
-        "\n",
-        "# Find arg min\n"
-      ],
+      "execution_count": 18,
       "metadata": {
         "id": "CCEKt4K2lsfQ"
       },
-      "execution_count": 9,
-      "outputs": []
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "tensor(0, device='cuda:0')"
+            ]
+          },
+          "execution_count": 18,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# Find arg max\n",
+        "torch.argmax(res)\n",
+        "\n",
+        "# Find arg min\n",
+        "torch.argmin(res)"
+      ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
+      "metadata": {
+        "id": "hmeybz4uixy7"
+      },
       "source": [
         "\n",
         "### 10. Make a random tensor with shape `(1, 1, 1, 10)` and then create a new tensor with all the `1` dimensions removed to be left with a tensor of shape `(10)`. Set the seed to `7` when you create it and print out the first tensor and it's shape as well as the second tensor and it's shape.\n",
@@ -267,30 +327,66 @@
         "tensor([0.5349, 0.1988, 0.6592, 0.6569, 0.2328, 0.4251, 0.2071, 0.6297, 0.3653,\n",
         "        0.8513]) torch.Size([10])\n",
         "```"
-      ],
-      "metadata": {
-        "id": "hmeybz4uixy7"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Set seed\n",
-        "\n",
-        "\n",
-        "# Create random tensor\n",
-        "\n",
-        "\n",
-        "# Remove single dimensions\n",
-        "\n",
-        "\n",
-        "# Print out tensors and their shapes\n"
-      ],
+      "execution_count": 23,
       "metadata": {
         "id": "TQ9zbRzVl1jV"
       },
-      "execution_count": 10,
-      "outputs": []
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "tensor([0.5349, 0.1988, 0.6592, 0.6569, 0.2328, 0.4251, 0.2071, 0.6297, 0.3653,\n",
+              "        0.8513])"
+            ]
+          },
+          "execution_count": 23,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# Set seed\n",
+        "torch.manual_seed(7)\n",
+        "\n",
+        "# Create random tensor\n",
+        "tens1=torch.rand((1,1,1,10))\n",
+        "\n",
+        "# Remove single dimensions\n",
+        "tens2=tens1.squeeze()\n",
+        "tens2\n",
+        "\n",
+        "# Print out tensors and their shapes\n"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "collapsed_sections": [],
+      "name": "00_pytorch_fundamentals_exercises.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.0"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
