--- a/exercises/06_pytorch_transfer_learning_exercises.ipynb
+++ b/exercises/06_pytorch_transfer_learning_exercises.ipynb
@@ -1496,17 +1496,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "\n",
-        "\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": 29,
       "metadata": {},
       "outputs": [
@@ -1597,8 +1586,7 @@
         "                     device=device,\n",
         "                     optimizer=torch.optim.Adam(params=model.parameters(),lr=0.001),\n",
         "                     loss_fn=loss_fn,\n",
-        "                     epochs=5\n",
-        "                     )\n",
+        "                     epochs=5)\n",
         "\n"
       ]
     },
